fix: correct homepage y overflow - style.css

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -277,7 +277,7 @@ table th {
 }
 
 .trainer-section h2 {
-    font-size: 3rem; /* Larger font size for section heading */
+    font-size: 2rem; /* Larger font size for section heading */
     margin-bottom: 1rem; /* Add some margin below the heading */
     color: #ff0000; /* Red color to match the image */
     text-transform: uppercase; /* Uppercase for stylistic preference */
